# __pimouse_vision_control

./: .travis.yml  CMakeLists.txt  LICENSE  package.xml  test-left-face.launch  test-right-face.launch
bagfiles/: face-left.bag
launch/: bagplay.launch  test-left-face.launch  test-right-face.launch  vision_control.launch
scripts/: exp1.py  exp2.py  exp3.py  face_detect1.py  face_detect_sync_exp1.py  face_detect_sync_exp2.py  face_detect_sync_exp3.py  face_to_face.py  face_to_face1.py  face_to_face2.py  face_to_face3.py
test/: test_face_to_face.py  travis_package_make.bash  travis_ros_install.bash  travis_test_face_to_face.py
