<?xml version="1.0"?>
<package>
  <name>pimouse_vision_control</name>
  <version>0.1.0</version>
  <description>The pimouse_vision_control package</description>

  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pimouse_ros</run_depend>

</package>
